update to java8 tolist method